force-app/main/default/objects/Opportunity/fields/Tiempo_y_Costo__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_y_Costo__c</fullName>
    <inlineHelpText>Tiempos y Costos de la implementación</inlineHelpText>
    <label>Tiempo y Costo Implementación</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>