force-app/main/default/objects/Opportunity/fields/Tiempos_de__c.field-meta.xml
<CustomField>
    <fullName>Tiempos_de__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Validación de Tiempos de Implementación</inlineHelpText>
    <label>Tiempos de Implementación Validados</label>
    <type>Checkbox</type>
</CustomField>