force-app/main/default/objects/Opportunity/fields/Tipo_de_Lead__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Lead__c</fullName>
    <label>Tipo de Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco</fullName>
            </value>
            <value>
                <fullName>Financiera</fullName>
            </value>
            <value>
                <fullName>Cooperativa</fullName>
            </value>
            <value>
                <fullName>Fondos de Inversión</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Empresa Tecnología</fullName>
            </value>
            <value>
                <fullName>Institución Gubernamental</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Aseguadora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>