force-app/main/default/objects/Opportunity/fields/Tipo_de_Opotunidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Opotunidad__c</fullName>
    <inlineHelpText>Campo Exclusivo de KAM</inlineHelpText>
    <label>Tipo de Opotunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crosselling Partnership Servicio</fullName>
            </value>
            <value>
                <fullName>Crosselling Partnership Licencia</fullName>
            </value>
            <value>
                <fullName>Upselling Fisa Licencia</fullName>
            </value>
            <value>
                <fullName>Crosselling Fisa Licencia</fullName>
            </value>
            <value>
                <fullName>Crosselling Fisa Servicios</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Canal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>