force-app/main/default/objects/Opportunity/fields/Valor_Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>Valor_Customer_Care__c</fullName>
    <label>Valor Customer Care</label>
    <summarizedField>OpportunityLineItem.Serv_Customer_Care__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>