force-app/main/default/objects/Opportunity/fields/Valor_de_Lista__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Lista__c</fullName>
    <label>Valor de Lista</label>
    <summarizedField>OpportunityLineItem.Valor_de_Lista__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>