force-app/main/default/objects/Opportunity/fields/ValorLR__c.field-meta.xml
<CustomField>
    <fullName>ValorLR__c</fullName>
    <label>Valor Licenciamiento</label>
    <summarizedField>OpportunityLineItem.Licencia_Recurrente__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Tiene_Licencia_Recurrente__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>