force-app/main/default/objects/Opportunity/fields/Verbal_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Acuerdo verbal de selección</inlineHelpText>
    <label>Verbal Agreement</label>
    <type>Checkbox</type>
</CustomField>