force-app/main/default/objects/Opportunity/fields/Viabilidad_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Viabilidad_del_Proyecto__c</fullName>
    <label>Viabilidad del Proyecto</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>