force-app/main/default/objects/Opportunity/recordTypes/B2B_Forecast.recordType-meta.xml
<RecordType>
    <fullName>B2B_Forecast</fullName>
    <active>true</active>
    <businessProcess>Forecast B2B</businessProcess>
    <description>Oportunidades B2B a crearse en futuro</description>
    <label>B2B Forecast</label>
</RecordType>