force-app/main/default/objects/Opportunity/recordTypes/Customer_Adquisition.recordType-meta.xml
<RecordType>
    <fullName>Customer_Adquisition</fullName>
    <active>true</active>
    <businessProcess>Customer Acquisition</businessProcess>
    <description>Proceso de Ventas FISA</description>
    <label>Customer Acquisition</label>
</RecordType>