force-app/main/default/objects/Opportunity/recordTypes/Marketing_Prospecting.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Prospecting</fullName>
    <active>true</active>
    <businessProcess>Marketing Prospecting</businessProcess>
    <description>Proceso de prospección de oportunidades del departamento de Marketing</description>
    <label>Marketing Prospecting</label>
</RecordType>