force-app/main/default/objects/Opportunity/recordTypes/Partners.recordType-meta.xml
<RecordType>
    <fullName>Partners</fullName>
    <active>true</active>
    <businessProcess>Partners</businessProcess>
    <description>Proceso de inclusión de Partners</description>
    <label>Partners</label>
</RecordType>