force-app/main/default/objects/Opportunity/recordTypes/Value_Realization.recordType-meta.xml
<RecordType>
    <fullName>Value_Realization</fullName>
    <active>true</active>
    <businessProcess>Value Realization</businessProcess>
    <description>Proceso de Ventas a Clientes</description>
    <label>Value Realization</label>
</RecordType>